# msflattener

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  deploy-image.yml
data/: .gitignore  get_data.bash
msflattener/: __init__.py  base.py  bruker.py  cli.py  dbscan.py  denoising.py  encyclopedia.py  extraction.py  mzml.py  utils.py
notebooks/: time_transformations.md  time_transformations.qmd  viz_collapse.md  viz_collapse.qmd
tests/: .gitignore  test_conversion.py  test_encyclopedia_dia.py
tests/data/: .gitignore  DDPASEF_10seconds.mzml  README.md  samplefile.pq
tests/data/230711_idleflow_400-1000mz_25mz_diaPasef_10sec.d/diaPASEF_TALUS_400_1000_0.7cycle.m/backup-2023-07-11.m/: hystar.method
tests/data/DDPASEF_10seconds.d/: BackgroundLinePos.ami  DensViewPos.ami  DensViewPosBgnd.ami  LockInfo  Storage.mcf_idx  analysis.tdf  analysis.tdf_bin  desktop.ini
tests/data/DDPASEF_10seconds.d/DDA_PASEF_lowInput_1.9sec.PaSER.m/: InstrumentSetup.isset  Maldi.method  microTOFQImpacTemAcquisition.method  submethods.xml
tests/data/DDPASEF_10seconds.d/DDA_PASEF_lowInput_1.9sec.PaSER.m/backup-2023-05-19.m/: Maldi.method  microTOFQImpacTemAcquisition.method  submethods.xml
tests/raw_data/: get_raw_data.zsh
